--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>Vite + React + TS</title>
+    <title>Pinekey Drop</title>
   </head>
   <body>
     <div id="root"></div>
